--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".login.MainActivity">
+        tools:context=".MainActivity">
     <ImageView
             android:layout_width="182dp"
             android:layout_height="185dp"
@@ -63,19 +63,5 @@
             app:layout_constraintEnd_toStartOf="@+id/join" app:layout_constraintHorizontal_bias="0.846"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
 
-<!--
-  
-    용환씨가 수정할 버튼
-
-    <Button
-            android:text="Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/testbts"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="160dp" app:layout_constraintHorizontal_bias="0.432"/>
-
--->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
