--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -17,7 +17,7 @@
     <ImageView
             android:layout_width="409dp"
             android:layout_height="283dp"
-            android:src="@drawable/logo"
+            android:src="@drawable/logo3"
             android:id="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
