--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,7 +7,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-       <!-- <TextView
+        <!--     <TextView
                 android:text="로그아웃"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/logout"
@@ -17,7 +17,15 @@
                 android:layout_constraintHorizontal_bias="0.955"
                 android:layout_constraintBottom_toBottomOf="parent"
                 android:layout_constraintVertical_bias="0.022"/>-->
-
+        <TextView
+                android:text="로그아웃"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/logout"/>
+        <Button
+                android:text="리뷰 남기기"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/reviewbtn"/>
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,14 +35,14 @@
                 android:text="@string/popular"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/most_popular_movies" />
+                android:text="@string/most_popular_movies"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/popular_movies"
@@ -43,7 +51,7 @@
                 android:layout_marginTop="8dp"
                 android:clipToPadding="false"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp" />
+                android:paddingEnd="16dp"/>
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,14 +61,14 @@
                 android:text="@string/top_rated"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/highest_rated_movies" />
+                android:text="@string/highest_rated_movies"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/top_rated_movies"
@@ -69,7 +77,7 @@
                 android:layout_marginTop="8dp"
                 android:clipToPadding="false"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp" />
+                android:paddingEnd="16dp"/>
 
         <TextView
                 android:layout_width="match_parent"
@@ -80,14 +88,14 @@
                 android:text="@string/upcoming"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/stay_updated" />
+                android:text="@string/stay_updated"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/upcoming_movies"
@@ -97,7 +105,8 @@
                 android:layout_marginBottom="16dp"
                 android:clipToPadding="false"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp" />
+                android:paddingEnd="16dp">
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
