--- a/app/src/main/res/layout/activity_reviewmake.xml
+++ b/app/src/main/res/layout/activity_reviewmake.xml
@@ -6,108 +6,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <ImageView
-            android:scaleType="centerCrop"
-            android:layout_width="164dp"
-            android:layout_height="269dp"
-            tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/imageView"
-            app:layout_constraintStart_toStartOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="40dp"
-
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.129"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="영화제목"
-            android:gravity="center_horizontal"
-            android:ems="10"
-            android:id="@+id/editTextTextPersonName"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="40dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView" app:layout_constraintHorizontal_bias="1.0"/>
-    <TextView
-
-            android:hint="장르 : 머시기"
-            android:gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            android:layout_marginTop="20dp"
-            app:layout_constraintHorizontal_bias="0.521"/>
-    <TextView
-            android:text="영화 개봉 날짜"
-            android:gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            android:layout_marginTop="20dp"
-            app:layout_constraintHorizontal_bias="0.543"/>
-    <TextView
-            android:text="영화내용영화내용영화영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용영화내용"
-            android:layout_width="184dp"
-            android:layout_height="114dp"
-            android:id="@+id/textView3"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="28dp"
-            app:layout_constraintHorizontal_bias="0.464"/>
-    <TextView
-            android:text="별점 평가"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView8"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.045"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="24dp"/>
-    <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ratingBar"
-            android:progressTint="#FFFF00"
-            android:rating="3"
-            android:background="@android:color/transparent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintHorizontal_bias="0.093"/>
-    <Button
-            android:text="리뷰 작성 완료"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/fButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="96dp"/>
+            android:id="@+id/recyclerView"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintBottom_toTopOf="@+id/coment2"
+            app:layout_constraintVertical_bias="0.0">
+    </androidx.recyclerview.widget.RecyclerView>
     <TextView
-            android:text="한줄 감상평"
+            android:text="한줄 메모"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView9"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28dp"
-            app:layout_constraintHorizontal_bias="0.045"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/coment2"
+            app:layout_constraintBottom_toTopOf="@+id/editMemo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.072"
+            android:layout_marginBottom="8dp"/>
     <EditText
-            android:layout_width="204dp"
+            android:layout_width="370dp"
             android:layout_height="49dp"
             android:inputType="textMultiLine"
             android:gravity="start|top"
             android:hint="내용을 입력해주세요."
             android:ems="10"
             android:id="@+id/editMemo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.077" app:layout_constraintBottom_toTopOf="@+id/fButton"
-            app:layout_constraintVertical_bias="0.303"/>
+            app:layout_constraintBottom_toTopOf="@+id/saveButton" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.609"
+            android:layout_marginBottom="8dp"/>
+    <Button
+            android:text="리뷰 작성 완료"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/saveButton"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
