--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
-            android:hint="암호를 입력하세요"
+            android:hint="비밀번호를 입력하세요"
             app:layout_constraintTop_toBottomOf="@+id/email"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
