--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -4,7 +4,7 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content">
 
-   <TextView
+    <TextView
             android:text="01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -12,22 +12,9 @@
             android:textSize="24sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textContent"
-            android:layout_marginTop="10dp"
+            app:layout_constraintVertical_bias="0.761"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="invisible"/>
-
-<!--    <TextView
-            android:text="2022/10/25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textDatetime"
-            android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-            android:layout_marginEnd="4dp"
-            android:layout_marginTop="10dp"
-            android:visibility="invisible"
-    />-->
 
     <TextView
             android:text="메모 내용 표시"
@@ -36,13 +23,12 @@
             android:id="@+id/textContent"
             android:textSize="24sp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.034"/>
+            android:layout_marginTop="12dp" app:layout_constraintStart_toEndOf="@+id/textNo"
+            app:layout_constraintEnd_toStartOf="@+id/deleteButton" app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="삭제"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="62dp"
+            android:layout_height="43dp"
             android:id="@+id/deleteButton"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
